Version 1.5.1 -- 05/04/2022
- Updated CMakeLists.txt to compile the common source files only once.
- Returned command line args.
- Changed the name of the certificate and private key files.

Version 1.5.0 -- 03/04/2022
- The code was rewritten.

Version 1.4.1 -- 30/01/2022
- SSL certificates and private keys are created in the home directory.
- The executable has the setuid bit set.

Version 1.4.0 -- 25/01/2022
- New dependency: openssl.
- The client communicates with the server using OpenSSL. The communication is encrypted with the latest TLS protocol. Old client versions are incompatible with the server version 1.2.0+.
- Added temporary workaround to fix inability to export pcap files into user directories when running as root.

Version 1.3.0 -- 19/01/2022
- New dependency: libcap.
- Root permissions are reduced during initialization, and when the sniffer is not active. The program only sets the CAP_NET_RAW permission when it's required. 

Version 1.2.1 -- 18/01/2022
- Doesn't ask for root access in order to launch the program. It is only required when sniffing locally.
- When setting an interface, the program will print a list of available interfaces for convenience.
- Added a newline print after selecting an option from the main menu.

Version 1.2.0 -- 08/01/2022
- Added ability to sniff packets on a remote machine.
- Renamed the Netscout class to LocalSniffer.
- Created a SignalHandler class to set signal handlers.
- Removed line that prints the amount of packets sniffed so far from the local sniffer.
- When receiving a message, the buffer is fully initialized with null characters.
- Changed the NetscoutMenu::get_int() function into a more generic template function NetscoutMenu::get_value<>().
- The switch in the LocalSniffer::menu_loop() function was moved inside a try-catch block. 
- The try-catch block in LocalSniffer::start_sniffer() was removed.
- Fixed memory leak in the callback of the local sniffer.

Version 1.1.2 -- 04/01/2022