@@ -2,6 +2,7 @@ Version 1.5.1 -- 05/04/2022
 - Updated CMakeLists.txt to compile the common source files only once.
 - Returned command line args.
 - Changed the name of the certificate and private key files.
+- Changed the name of the project.
 
 Version 1.5.0 -- 03/04/2022
 - The code was rewritten.
